--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
+    <title>Primer proyecto en React</title>
+</head>
+
+<body>
+    <div id="root">
+        <h1>Hola cómo estás</h1>
+        <div id="main-content">
+            <section>
+                <p>Esta es una section de HTML, saludos</p>
+            </section>
+        </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
-  </body>
+</body>
+
 </html>
